samples/_failures_safe/1761081279_f87665_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5c3939bc.c: In function ‘main’:
./samples/SAFE/__tmp_5c3939bc.c:173:9: error: expected ‘,’ or ‘;’ at end of input
  173 |         size_t len = strlen
      |         ^~~~~~
./samples/SAFE/__tmp_5c3939bc.c:173:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5c3939bc.c:173:9: error: expected declaration or statement at end of input
